# randomticker

./: .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  clean_data.py
src/: generate_random.rs  main.rs  statics.rs  ticker_logic.rs
