[package]
name = "randomticker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
chrono = { version = "0.4.33", features = ["clock"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
