[package]
name = "randomticker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
